syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example";
option java_outer_classname = "StockTrackingServiceProto";

// StockItem definition
message StockItem {
  int32 product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
}

// Inventory inquiry request
message StockQueryRequest {
  string product_name = 1;
}

// Inventory status
message StockStatus {
  int32 product_id = 1;
  string product_name = 2;
  int32 current_quantity = 3;
  string status = 4;      // stock available/ stock shortage
}

// Service definition
service StockTrackingService {
  // simple RPC: Check the inventory status of a specific item
  rpc QueryStock(StockQueryRequest) returns (StockStatus);

  // server-side streaming RPC: Send inventory status regularly
  rpc SubscribeStockUpdates(StockQueryRequest) returns (stream StockStatus);
}




